--- a/crates/dojo-world/Cargo.toml
+++ b/crates/dojo-world/Cargo.toml
@@ -11,8 +11,8 @@ anyhow.workspace = true
 async-trait.workspace = true
 cairo-lang-filesystem.workspace = true
 cairo-lang-project.workspace = true
-cairo-lang-starknet.workspace = true
 cairo-lang-starknet-classes.workspace = true
+cairo-lang-starknet.workspace = true
 camino.workspace = true
 convert_case.workspace = true
 dojo-utils = { workspace = true, optional = true }
@@ -22,8 +22,8 @@ serde.workspace = true
 serde_json.workspace = true
 serde_with.workspace = true
 smol_str.workspace = true
-starknet.workspace = true
 starknet-crypto.workspace = true
+starknet.workspace = true
 thiserror.workspace = true
 topological-sort.workspace = true
 tracing.workspace = true
@@ -31,7 +31,7 @@ tracing.workspace = true
 cainome.workspace = true
 dojo-types = { path = "../dojo-types", optional = true }
 http = { workspace = true, optional = true }
-ipfs-api-backend-hyper = { git = "https://github.com/ferristseng/rust-ipfs-api", rev = "af2c17f7b19ef5b9898f458d97a90055c3605633", features = [ "with-hyper-rustls" ], optional = true }
+ipfs-api-backend-hyper = { workspace = true, optional = true }
 scarb = { workspace = true, optional = true }
 tokio = { version = "1.32.0", features = [ "time" ], default-features = false, optional = true }
 toml.workspace = true
