--- a/crates/sozo/ops/Cargo.toml
+++ b/crates/sozo/ops/Cargo.toml
@@ -15,10 +15,10 @@ cairo-lang-defs.workspace = true
 cairo-lang-filesystem.workspace = true
 cairo-lang-plugins.workspace = true
 cairo-lang-project.workspace = true
-cairo-lang-sierra.workspace = true
 cairo-lang-sierra-to-casm.workspace = true
-cairo-lang-starknet.workspace = true
+cairo-lang-sierra.workspace = true
 cairo-lang-starknet-classes.workspace = true
+cairo-lang-starknet.workspace = true
 cairo-lang-test-plugin.workspace = true
 cairo-lang-utils.workspace = true
 camino.workspace = true
@@ -36,16 +36,16 @@ num-bigint = "0.4.6"
 num-traits.workspace = true
 reqwest.workspace = true
 rpassword.workspace = true
-scarb.workspace = true
 scarb-ui.workspace = true
+scarb.workspace = true
 semver.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 serde_with.workspace = true
 smol_str.workspace = true
 sozo-walnut = { workspace = true, optional = true }
-starknet.workspace = true
 starknet-crypto.workspace = true
+starknet.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 toml.workspace = true
@@ -58,7 +58,7 @@ katana-runner = { workspace = true, optional = true }
 [dev-dependencies]
 assert_fs.workspace = true
 dojo-test-utils = { workspace = true, features = [ "build-examples" ] }
-ipfs-api-backend-hyper = { git = "https://github.com/ferristseng/rust-ipfs-api", rev = "af2c17f7b19ef5b9898f458d97a90055c3605633", features = [ "with-hyper-rustls" ] }
+ipfs-api-backend-hyper.workspace = true
 katana-runner.workspace = true
 
 [features]
